@@ -1,3 +1,8 @@
+2016-10-14  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
+
+	* gui/mainWindow.py (MainApp.__createButtons): Set pause button as
+	disabled at start and enable it after algorithm started.
+
 2016-10-12  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/mainWindow.py (MainApp): Add save function to export to PNG
